<resources>
    <string name="app_name">HealthSense</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_my_trainings">My Trainings</string>
    <string name="menu_training_history">Training History</string>
    <string name="menu_device">Device</string>
    <string name="menu_change_pasword">Change Password</string>
    <string name="menu_payment_methods">Payment methods</string>
    <string name="menu_my_Suscribers">My Suscribers</string>
    <string name="menu_my_Suscriptions">My Suscriptions</string>
    <string name="cbu">CBU</string>
    <string name="alias">ALIAS</string>
    <string name="cuil_cuit">CUIL/CUIT</string>
    <string name="info_payment">Add the necessary data so that we can deposit your money.</string>
    <string name="resquest_password">REQUEST PASSWORD</string>
    <string name="text_change_new_pass">Write your new password that will be used for your next login</string>
    <string name="set_price">SET PRICE</string>
    <string name="price">Price</string>
    <string name="waiting_for_the_cost">Waiting for the cost</string>
    <string name="waiting_for_training">Waiting for training</string>
    <string name="assigned">Assigned</string>
    <string name="add_training">ADD TRAINING</string>
    <string name="edit">EDIT</string>
    <string name="difficulty">Difficulty</string>
    <string name="url">URL</string>
    <string name="time">Time 00:00:00</string>
    <string name="instructions">Instructions:</string>
    <string name="desciptions">Description:</string>
    <string name="save">Save</string>
    <string name="remove">Remove:</string>
    <string name="no_workouts">No workouts to do.</string>
    <string name="cant_train">Impossible to save more trainings.</string>
    <string name="exercise_add_info">The exercise has been successfully added</string>
    <string name="exercise_finish">The exercise has been successfully finished</string>
    <string name="exercise_remove_info">The exercise has been successfully deleted</string>
    <string name="accepted">Accepted</string>
    <string name="pay">Pay</string>
    <string name="suscribe">Suscribe</string>
    <string name="registered">REGISTERED</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="end_up">End up</string>
    <string name="loading">Loading...</string>
    <string name="please_wait">Please wait...</string>
    <string name="e4000">Please check your connection</string>
    <string name="credential_type">Credent. Type</string>
    <string name="e200">operation successfully</string>
    <string name="diseases">Diseases</string>
    <string name="urgency">Urgency</string>
    <string name="social_situation">Social situation</string>
    <string name="add">Add</string>
    <string name="age_range">Age range</string>
    <string name="schedule_available">Schedule available</string>

    <string name="close_session">Log out</string>

    <string name="rate_training">Rate your training!</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">SIGN IN</string>
    <string name="action_sign_up_short">SIGN UP</string>
    <string name="register">REGISTER</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="remember_me">"Remember me"</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="welcome_to_the">"Welcome to"</string>
    <string name="healthsense">"HealthSense"</string>
    <string name="choose_your">CHOOSE YOUR</string>
    <string name="profile">profile</string>
    <string name="user">User</string>
    <string name="medical_staff"> Medical Staff </string>

    <!-- Strings related for Trainings history-->
    <string name="workouts_completed">WORKOUTS COMPLETED:</string>
    <string name="total_hours">TOTAL HOURS:</string>
    <string name="date_executed">Date:</string>
    <string name="rating">Rating:</string>


    <!-- Strings related first sign up and profile -->
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="credential_id">Credential ID</string>
    <string name="birthday_date">Birthday Date</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dni">DNI</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="interal_medicine">INTERNAL MEDICINE</string>
    <string name="save_info">SAVE INFO</string>

    <string name="address">Address</string>
    <string name="Weight">Weight</string>
    <string name="height">Height</string>
    <string name="insurance_number">Insurance Number</string>
    <string name="insurance_id">Insurance ID</string>
    <string name="city">City</string>

    <string name="password_fields">Password fields do not match.</string>


    <!-- String profile -->
    <string name="profile_info">PROFILE INFO</string>
    <string name="language">Languages</string>
    <string name="available">Available</string>
    <string name="not_available">Not Available</string>

    <!-- String change password -->
    <string name="new_password">New Password</string>
    <string name="repeat_password">Confirm Password</string>
    <string name="code">Code</string>
    <string name="change_your_password">Change your password</string>
    <string name="description_pass">We have sent you an email with a new password. Change it after you sign in.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- String devices -->
    <string name="on_off">ON/OFF</string>
    <string name="visibility">Visibility</string>
    <string name="discover">Discover</string>
    <string name="connect">Connect</string>
    <string name="incoming_message">Incoming message</string>
    <!-- String errors -->
    <string name="e401">Did not enter any token.</string>
    <string name="e402">The token does not match with any user.</string>
    <string name="e403">The user does not have permits on that route.</string>
    <string name="e404">Non-existing endpoint.</string>
    <string name="e405">Invalid token.</string>
    <string name="e406">Username does not exist.</string>
    <string name="e407">Invalid password.</string>
    <string name="e410">Missing parameter on the route.</string>
    <string name="e411">Fill in the empty fields.</string>
    <string name="e412">The datetime format is wrong.</string>
    <string name="e413">The date format is wrong.</string>
    <string name="e414">The time format is wrong.</string>
    <string name="e415">The email format is wrong.</string>
    <string name="e416">The FK is wrong.</string>
    <string name="e417">The email is already associated with another user.</string>
    <string name="e500">Server error. An error has occurred. Please try again.</string>
    <string name="eGeneric">Unknow error</string>
    <string name="expires">EXPIRES:</string>


</resources>
