<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_action_profile"
            android:title="@string/menu_profile"/>
        <item
            android:id="@+id/nav_my_trainings"
            android:icon="@android:drawable/star_big_off"
            android:title="@string/menu_my_trainings" />
        <item
            android:id="@+id/nav_training_history"
            android:icon="@drawable/ic_action_history"
            android:title="@string/menu_training_history" />

        <item
            android:id="@+id/nav_my_suscriptions"
            android:icon="@drawable/ic_action_suscriptions"
            android:title="@string/menu_my_Suscriptions" />

        <item
            android:id="@+id/nav_device"
            android:icon="@drawable/ic_action_device"
            android:title="@string/menu_device" />

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_change_pass"
                android:icon="@android:drawable/ic_lock_idle_lock"
                android:title="@string/menu_change_pasword" />

            <item
                android:id="@+id/nav_close_session"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/close_session"/>
        </menu>
    </item>

</menu>
