<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.healthsense.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_my_trainings"
        android:name="com.example.healthsense.ui.mytrainings.MyTrainingsFragment"
        android:label="@string/menu_my_trainings" />

    <fragment
        android:id="@+id/nav_training_history"
        android:name="com.example.healthsense.ui.traininghistory.TrainingHistoryFragment"
        android:label="@string/menu_training_history"
        tools:layout="@layout/fragment_training_history" />

    <fragment
        android:id="@+id/nav_my_suscriptions"
        android:name="com.example.healthsense.ui.suscriptions.SuscriptionsFragment"
        android:label="@string/menu_my_Suscriptions"
        tools:layout="@layout/fragment_suscriptions" />

    <fragment
        android:id="@+id/nav_my_suscribers"
        android:name="com.example.healthsense.ui.suscriptions.SuscribersFragment"
        android:label="@string/menu_my_Suscribers"
        tools:layout="@layout/fragment_suscribers" />

    <fragment
        android:id="@+id/nav_device"
        android:name="com.example.healthsense.ui.device.DeviceFragment"
        android:label="@string/menu_device"
        tools:layout="@layout/fragment_device" />

    <fragment
        android:id="@+id/nav_payment_methods"
        android:name="com.example.healthsense.ui.payment.PaymentFragment"
        android:label="@string/menu_payment_methods"
        tools:layout="@layout/fragment_payment" />

    <fragment
        android:id="@+id/nav_change_pass"
        android:name="com.example.healthsense.ui.password.ChangePass"
        android:label="@string/menu_change_pasword"
        tools:layout="@layout/fragment_change_pass"/>

    <fragment
        android:id="@+id/nav_close_session"
        android:name="com.example.healthsense.ui.logout.Logout"
        android:label="@string/close_session"/>

</navigation>